Add TextEditReplaceTest